--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
 <nav class="navbar navbar-expand-lg navbar navbar-light" style="background-color: #f5dc00;">
-  <a class="navbar-brand" style="font-weight: bold; font-size: 30px; color: rgb(0, 0, 0);">Loja Api</a>
+  <a routerLink="" routerLinkActive="active" class="navbar-brand" style="font-weight: bold; font-size: 30px; color: rgb(0, 0, 0);">Loja Api</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
