--- a/src/app/produtos/produtos.component.html
+++ b/src/app/produtos/produtos.component.html
@@ -1,15 +1,16 @@
 <div style="background-color: #f4f4f4; padding: 20px;">
-  <h2 style="color: #353535;">Listagem dos produtos</h2>
+  <h2 style="color: #353535;">Listagem dos produtos </h2>
 </div>
+
 <div class="box-list list-inline-item box-middle"> 
-  <li class="media item-preview " style="background-color: #ffffff; width: 100%; min-width: 700px; border-bottom: 1px solid rgb(44, 44, 44); ">
+  <li *ngFor="let produto of produtos" class="media item-preview " style="background-color: #ffffff; width: 100%; min-width: 700px; border-bottom: 1px solid rgb(44, 44, 44); ">
       <img src="https://images1.kabum.com.br/produtos/fotos/49841/49841_1507735187_index_gg.jpg" alt="" class="mr-3" width="150">
       <div class="media-body" style="min-width: 200px;">
-          <a style="text-align: left;" href="#"><h5>Mouse gamer razer</h5> </a>
-          <p style="text-align: left; font-size: 22px;"><img src="https://i.ibb.co/nPtR2gg/icone1.png" width="30" height="30" alt="asda"> 15 Quantidade</p>
+          <a routerLink="/produto/detail/{{produto['pk']}}" style="text-align: left;" href="#"><h5>{{produto['name']}}</h5> </a>
+          <p style="text-align: left; font-size: 22px;"><img src="https://i.ibb.co/nPtR2gg/icone1.png" width="30" height="30" alt="asda"> {{ produto['quantidade'] }} Unidade</p>
       </div>
       <div style="background-color: #f4f4f4; height: 150px; padding: 5px; text-align: center;"> 
-          <p style="margin-top: 30px; color:#45ed27; font-weight: bold; font-size: 40px;"> R$2550 </p>
+          <p style="margin-top: 30px; color:#45ed27; font-weight: bold; font-size: 40px;"> R$ {{ produto['preco'] }} </p>
       </div>
   </li>
 
