produto put and delete

--- a/src/app/produto-detail/produto-detail.component.html
+++ b/src/app/produto-detail/produto-detail.component.html
@@ -1,40 +1,46 @@
-
-<div class="box-list list-inline-item box-middle" style="height: max-content;"> 
+<div class="box-list list-inline-item box-middle" style="height: max-content;">
   <h3> {{ produto['name'] }}</h3>
-  <div class="media " style="height: 500px; height: max-content;" >
-    <img src="https://images1.kabum.com.br/produtos/fotos/49841/49841_1507735187_index_gg.jpg" width="500px" height="auto"> 
-    <div style=" width: 200px; background-color: #353535;" >
+  <p>Value: {{ produto.name }}</p>
+  <div class="media " style="height: 500px; height: max-content;">
+    <img src="https://images1.kabum.com.br/produtos/fotos/49841/49841_1507735187_index_gg.jpg" width="500px"
+      height="auto">
+    <div style=" width: 200px; background-color: #353535;">
       <p style=" color:#45ed27; font-weight: bold; font-size: 40px;"> R${{ produto['preco'] }} </p>
       <p style="font-size: 22px; color:#45ed27 ;">
-      <img src="https://i.ibb.co/9YBcC2j/icone2.png" width="30" height="30" alt="asda"> {{produto['quantidade']}} Unidades
+        <img src="https://i.ibb.co/9YBcC2j/icone2.png" width="30" height="30" alt="asda"> {{produto['quantidade']}}
+        Unidades
       </p>
       <form class="">
         <label for="qtd" style="color:#2fa51a; font-weight: bold; font-size: 22px;"> Quantidade vendida</label>
         <input id="qtd" type="" name="quantidade" style="width: 100px; border-radius: 5px;"><br><br>
         <button class="btn btn-primary btn-lg bt-comp" type="submit"> Criar venda</button>
-        
-      </form>     
+
+      </form>
       <br>
-      <a class="btn btn-primary btn-lg" style="background-color: #ed2727; color:#353535; font-weight: bold; width: 187px;" href="#"> Remover </a>
+      <button (click)="deleteProduto()" class="btn btn-primary btn-lg"
+        style="background-color: #ed2727; color:#353535; font-weight: bold; width: 187px;"> Remover </button>
       <br>
       <br>
 
-
-      <div ng-app="">
-
+      <div>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
         <label for="toggle-1" class="leo btn btn-primary btn-lg bt-comp"> Editar </label>
         <input id="toggle-1" type="checkbox">
 
-        <form style="text-align: left; padding: 5px;" ng-hide="myVar" id="mostra" >
+        <form style="text-align: left; padding: 5px;" ng-hide="myVar" id="mostra" method="POST" #frm="ngForm"
+          (ngSubmit)="putProduto(frm)">
           <hr>
           <label for="name" style=" color: white;"> Nome:</label>
-          <input class="form-control" type="text" id="name" value="{{produto['name']}}">
+          <input class="form-control" type="text" id="name" name="name" [(ngModel)]="produto.name" required
+            value="{{produto['name']}}">
           <label for="qtd" style=" color: white;"> Quantidade: </label>
-          <input class="form-control" type="number" min="0" id="qtd" value="{{produto['quantidade']}}">
+          <input class="form-control" type="number" min="0" id="qtd" value="{{produto['quantidade']}}" name="quantidade"
+            [(ngModel)]="produto.quantidade" required>
           <label for="preco" style=" color: white;"> Preco: </label>
-          <input class="form-control" type="number" min="0" id="preco" value="{{produto['preco']}}">
+          <input class="form-control" type="number" min="0" id="preco" name="preco" [(ngModel)]="produto.preco"
+            required>
           <br>
-          <div style="text-align: center;"> 
+          <div style="text-align: center;">
             <button class="btn btn-lg btn-primary" type="submit"> Confirmar </button>
           </div>
           <hr>
@@ -47,4 +53,3 @@
   <h3> Descrição: </h3>
   <p> Produto novo e nem usado. pronto para seu uso</p>
 </div>
-
