--- a/src/app/produtos/produtos.component.html
+++ b/src/app/produtos/produtos.component.html
@@ -9,7 +9,7 @@
           <a routerLink="/produto/detail/{{produto['pk']}}" style="text-align: left;" href="#"><h5>{{produto['name']}}</h5> </a>
           <p style="text-align: left; font-size: 22px;"><img src="https://i.ibb.co/nPtR2gg/icone1.png" width="30" height="30" alt="asda"> {{ produto['quantidade'] }} Unidade</p>
       </div>
-      <div style="background-color: #f4f4f4; height: 150px; padding: 5px; text-align: center;"> 
+      <div style="background-color: #424242; width:210px; height: 150px; padding: 5px; text-align: center;"> 
           <p style="margin-top: 30px; color:#45ed27; font-weight: bold; font-size: 40px;"> R$ {{ produto['preco'] }} </p>
       </div>
   </li>
