--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,9 @@
       <li class="nav-item">
         <a routerLink="/vendas-list" routerLinkActive="active" class="nav-link"  style="font-weight: bold; font-size: 27px; color: rgb(0, 0, 0);">Vendas</a>
       </li>
+      <li class="nav-item">
+        <a routerLink="/add-produto" routerLinkActive="active" class="nav-link"  style="font-weight: bold; font-size: 27px; color: rgb(0, 0, 0);">Add Produto</a>
+      </li>
     </ul>
     <a href="#" class="nav-link">Login administrativo</a>
   </div>
