--- a/src/app/vendas/vendas.component.html
+++ b/src/app/vendas/vendas.component.html
@@ -1,3 +1,38 @@
-<p>
-  vendas works!
-</p>
+<div style="background-color: #f4f4f4; padding-top: 10px;padding-left: 10px;">
+  <div class="navbar navbar-light bg-light justify-content-between">
+    <p class="navbar-brand" style="color: #353535; font-size: 30px; font-weight: bold; text-align: left; "> Listagem de
+      vendas </p>
+  </div>
+</div>
+asda
+<div class="box-list list-inline-item box-middle" *ngIf="vendas.length > 0; else elseBlock">
+  <li *ngFor="let venda of vendas | paginate: { itemsPerPage: count, currentPage: p }" class="media item-preview "
+    style="background-color: #ffffff; width: 100%; min-width: 700px; border-bottom: 1px solid rgb(44, 44, 44); ">
+    <img src="https://images1.kabum.com.br/produtos/fotos/49841/49841_1507735187_index_gg.jpg" alt="" class="mr-3"
+      width="150">
+    <div class="media-body" style="min-width: 200px;">
+      <a routerLink="/produto/detail/{{venda.produto.id}}" style="text-align: left;" href="#">
+        <h5>{{venda.produto.name}}</h5>
+      </a>
+      <p style="text-align: left; font-size: 22px;"><img src="https://i.ibb.co/nPtR2gg/icone1.png" width="30"
+          height="30" alt="asda"> {{ venda.quantidade }} Unidade</p>
+    </div>
+    <div style="background-color: #424242; width:210px; height: 150px; padding: 5px; text-align: center;">
+      <p style="margin-top: 20px; color:#45ed27; font-weight: bold; font-size: 20px;"> Valor Total  </p>
+      <p style="margin-top: -20px; color:#45ed27; font-weight: bold; font-size: 40px;"> R${{venda.valor_total}}  </p>
+    </div>
+  </li>
+
+  <div class="text-right" style="margin-top: 20px;" *ngIf="vendas.length > 0">
+    <pagination-controls (pageChange)="p = $event"></pagination-controls>
+  </div>
+
+</div>
+
+
+
+  <ng-template #elseBlock>
+    <div class="box-list list-inline-item box-middle" style="width: 50%">
+      <p style="font-weight: bold; font-size: 30px;"> Sem Vendas </p>
+    </div>
+  </ng-template>
