--- a/src/app/criar-produto/criar-produto.component.html
+++ b/src/app/criar-produto/criar-produto.component.html
@@ -10,6 +10,12 @@
     <label for="preco" style=" color: rgb(0, 0, 0);"> Preco: </label>
     <input class="form-control" type="number" min="1" id="preco" name="preco" [(ngModel)]="novoProduto.preco" required>
     <br>
+    <div class="custom-file">
+        <input type="file" class="file-input" id="file" name="file" (change)="onChange($event)" [(ngModel)]="novoProduto.file" required>
+        <label class="custom-file-label" for="file" id="fileLabel" >Escolha um imagem</label>
+      </div>
+      
+    <br>
     <hr>
     <div style="text-align: center;">
       <button [disabled]="frmP.invalid" class="btn btn-lg btn-primary" type="submit"> Confirmar </button>
@@ -17,4 +23,8 @@
    
   </form>
   <p ([ngModel])="mensagem" style="font-size: 17px; color: rgb(255, 0, 0); font-weight: bold;">{{ mensagem }} </p>
+  
+  
+  
 </div>
+
