--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,41 @@
 <header>
-<nav class="navbar navbar-expand-lg navbar navbar-light" style="background-color: #f5dc00;">
-  <a routerLink="" routerLinkActive="active" class="navbar-brand" style="font-weight: bold; font-size: 30px; color: rgb(0, 0, 0);">Loja Api</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a routerLink="/produtos-list" routerLinkActive="active" class="nav-link"  style="font-weight: bold; font-size: 27px; color: rgb(0, 0, 0); ">Produtos 
-          <span class="sr-only">(current)</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a routerLink="/vendas-list" routerLinkActive="active" class="nav-link"  style="font-weight: bold; font-size: 27px; color: rgb(0, 0, 0);">Vendas</a>
-      </li>
-      <li class="nav-item">
-        <a routerLink="/add-produto" routerLinkActive="active" class="nav-link"  style="font-weight: bold; font-size: 27px; color: rgb(0, 0, 0);">Add Produto</a>
-      </li>
-    </ul>
-    <a href="#" class="nav-link">Login administrativo</a>
-  </div>
-</nav>
+  <nav class="navbar navbar-expand-lg navbar navbar-light" style="background-color: #00a7f5;">
+    <a routerLink="" routerLinkActive="active" class="navbar-brand"
+      style="font-weight: bold; font-size: 30px; color: rgb(0, 0, 0);">Loja Api</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a routerLink="/produtos-list" routerLinkActive="active" class="nav-link"
+            style="font-weight: bold; font-size: 27px; color: rgb(0, 0, 0); ">Produtos
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/vendas-list" routerLinkActive="active" class="nav-link" *ngIf="dados.length > 0"  
+            style="font-weight: bold; font-size: 27px; color: rgb(0, 0, 0);">Vendas</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/add-produto" routerLinkActive="active" class="nav-link" *ngIf="dados.length > 0"
+            style="font-weight: bold; font-size: 27px; color: rgb(0, 0, 0);">Add Produto</a>
+        </li>
+      </ul>
+
+      <a routerLink="/login" routerLinkActive="active" class="nav-link" *ngIf="dados.length == 0; else elseBlock"
+      style="font-weight: bold; color: rgb(0, 0, 0);">Login administrativo</a>
+
+      <ng-template #elseBlock>
+        <a class="nav-link" style="font-size:22px; font-weight: bold; color: rgb(0, 0, 0);">Bem vindo(a), {{dados['currentUserName']}}</a>
+        <a routerLink="/logout" routerLinkActive="active" class="nav-link"
+      style="font-weight: bold; color: rgb(0, 0, 0);">Sair</a>
+      </ng-template>
+
+      
+    </div>
+  </nav>
 
 </header>
 <div>
