--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,34 @@
 <div>
-  <h1 style="color: aqua;"> home com infos legais </h1>
-</div>
+    <h1 style="color: aqua;"> Api Loja </h1>
+    <h2 style="color: aqua;"> Aqui você podera pesquisar os produtos e saber se estão disponiveis em nossa loja fisica
+    </h2>
 
 
+    <div style="background-color: #f4f4f4; padding: 10px;">
+        <nav class="navbar navbar-light bg-light justify-content-between">
+            <a class="navbar-brand" style="color: #353535; font-size: 30px; font-weight: bold;">Novos Produtos</a>
+
+        </nav>
+    </div>
+
+    <ul class="box-list list-inline box-middle" style="padding: 10px; background-color: #e9e9e9;">
+
+
+        <li class="list-inline-item card-produto" *ngFor="let produto of produtos">
+            <img src="{{produto.file}}" width="184px" height="auto" alt="Card image cap">
+            <div class="">
+                <a routerLink="/produto/detail/{{produto['pk']}}">
+                    <h5 class="card-title">{{produto.name}}</h5>
+                </a>
+
+
+            </div>
+            <div class="card-footer">
+                <a class="text-muted" style="font-size: 20px;">R$ {{produto.preco}}</a>
+            </div>
+        </li>
+
+
+
+
+    </ul>
