--- a/src/app/produtos/produtos.component.html
+++ b/src/app/produtos/produtos.component.html
@@ -11,16 +11,15 @@
 </div>
 
 <div class="box-list list-inline-item box-middle" *ngIf="produtos.length > 0; else elseBlock">
-  <li *ngFor="let produto of produtos | paginate: { itemsPerPage: count, currentPage: p }" class="media item-preview "
-    style="background-color: #ffffff; width: 100%; min-width: 700px; border-bottom: 1px solid rgb(44, 44, 44); ">
-    <img src="{{produto.file}}" alt="" class="mr-3"
-      width="150">
+  <li *ngFor="let produto of produtos | paginate: { itemsPerPage: count, currentPage: p }"
+    class="animate-hover media item-preview item-card">
+    <img src="{{produto.file}}" alt="" class="mr-3 img-sombra" width="150">
     <div class="media-body" style="min-width: 200px;">
       <a routerLink="/produto/detail/{{produto['pk']}}" style="text-align: left;" href="#">
         <h5>{{produto['name']}}</h5>
       </a>
-      <p style="text-align: left; font-size: 22px;"><img src="https://i.ibb.co/nPtR2gg/icone1.png" width="30"
-          height="30" alt="asda"> {{ produto['quantidade'] }} Unidade</p>
+      <p style="text-align: left; font-size: 22px;"><img class="none" src="https://i.ibb.co/nPtR2gg/icone1.png"
+          width="30" height="30" alt="asda"> {{ produto['quantidade'] }} Unidade</p>
     </div>
     <div style="background-color: #424242; width:210px; height: 150px; padding: 5px; text-align: center;">
       <p style="margin-top: 30px; color:#45ed27; font-weight: bold; font-size: 40px;"> R$ {{ produto['preco'] }} </p>
