--- a/src/app/funcionario/funcionario.component.html
+++ b/src/app/funcionario/funcionario.component.html
@@ -12,7 +12,7 @@
 </div>
 
 <ul class="box-list list-inline-item box-middle" >
-  <li class="media item-preview item-style" *ngFor="let funcionario of funcionarios">
+  <li class="media item-preview item-style animate-hover" *ngFor="let funcionario of funcionarios">
     <img src="https://cdn.pixabay.com/photo/2017/02/25/22/04/user-icon-2098873_960_720.png" class="mr-3" width="150">
     <div class="media-body" style="min-width: 200px;">
       <p style="text-align: left; font-weight: bold; font-size: 20px;">{{ funcionario.name }}</p>
