--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,22 +8,22 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a routerLink="/produtos-list" routerLinkActive="active" class="nav-link"
+        <li class="nav-item animate-hover">
+          <a routerLink="/produtos-list" routerLinkActive="active" class="nav-link "
             style="font-weight: bold; font-size: 27px; color: rgb(0, 0, 0); ">Produtos
             <span class="sr-only">(current)</span>
           </a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item animate-hover">
           <a routerLink="/vendas-list" routerLinkActive="active" class="nav-link" *ngIf="dados.length > 0"  
             style="font-weight: bold; font-size: 27px; color: rgb(0, 0, 0);">Vendas</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item animate-hover">
           <a routerLink="/add-produto" routerLinkActive="active" class="nav-link" *ngIf="dados.length > 0"
             style="font-weight: bold; font-size: 27px; color: rgb(0, 0, 0);">Add Produto</a>
         </li>
 
-        <li class="nav-item">
+        <li class="nav-item animate-hover">
           <a routerLink="/funcionarios" routerLinkActive="active" class="nav-link" *ngIf="dados.length > 0"
             style="font-weight: bold; font-size: 27px; color: rgb(0, 0, 0);">Funcionarios</a>
         </li>
@@ -33,8 +33,8 @@
       style="font-weight: bold; color: rgb(0, 0, 0);">Login administrativo</a>
 
       <ng-template #elseBlock>
-        <a class="nav-link" style="font-size:22px; font-weight: bold; color: rgb(0, 0, 0);">Bem vindo(a), {{dados['currentUserName']}}</a>
-        <a routerLink="/logout" routerLinkActive="active" class="nav-link"
+        <a class="nav-link animate-hover" style="font-size:22px; font-weight: bold; color: rgb(0, 0, 0);">Bem vindo(a), {{dados['currentUserName']}}</a>
+        <a routerLink="/logout" routerLinkActive="active" class="nav-link animate-hover"
       style="font-weight: bold; color: rgb(0, 0, 0);">Sair</a>
       </ng-template>
 
