--- a/src/app/criar-funcionario/criar-funcionario.component.html
+++ b/src/app/criar-funcionario/criar-funcionario.component.html
@@ -3,26 +3,26 @@
   <form style="text-align: left; padding: 5px;" method="POST" #frmP="ngForm" (ngSubmit)="postFuncionario(frm)">
     <hr>
     <label for="name" style=" color: rgb(0, 0, 0);"> Nome:</label>
-    <input class="form-control" type="text" id="name" name="name" [(ngModel)]="funcionario.name" required>
+    <input class="form-control animate-hover" type="text" id="name" name="name" [(ngModel)]="funcionario.name" required>
 
     <label for="username" style=" color: rgb(0, 0, 0);"> Username: </label>
-    <input class="form-control" type="text" id="username" name="username" [(ngModel)]="funcionario.username" required>
+    <input class="form-control animate-hover" type="text" id="username" name="username" [(ngModel)]="funcionario.username" required>
 
     <label for="email" style=" color: rgb(0, 0, 0);"> Email: </label>
-    <input class="form-control" type="email" min="0" id="email" name="email" [(ngModel)]="funcionario.email" required>
+    <input class="form-control animate-hover" type="email" min="0" id="email" name="email" [(ngModel)]="funcionario.email" required>
     
     <label for="telefone" style=" color: rgb(0, 0, 0);"> Telefone: </label>
-    <input class="form-control" type="text" id="telefone" name="telefone" [(ngModel)]="funcionario.telefone" required>
+    <input class="form-control animate-hover" type="text" id="telefone" name="telefone" [(ngModel)]="funcionario.telefone" required>
     
     <label for="cpf" style=" color: rgb(0, 0, 0);"> CPF: </label>
-    <input class="form-control" type="text" id="cpf" name="cpf" [(ngModel)]="funcionario.cpf" required>
+    <input class="form-control animate-hover" type="text" id="cpf" name="cpf" [(ngModel)]="funcionario.cpf" required>
     
     
     <label for="password" style=" color: rgb(0, 0, 0);"> Senha: </label>
-    <input class="form-control" type="password" id="password" name="password" minlength="5" [(ngModel)]="funcionario.password" required>
+    <input class="form-control animate-hover" type="password" id="password" name="password" minlength="5" [(ngModel)]="funcionario.password" required>
     
     <label for="password2" style=" color: rgb(0, 0, 0);">Confirmar Senha: </label>
-    <input class="form-control" type="password" id="password2" name="password2" minlength="5" [(ngModel)]="funcionario.senha2" required>
+    <input class="form-control animate-hover" type="password" id="password2" name="password2" minlength="5" [(ngModel)]="funcionario.senha2" required>
     
     <br>
     <br>
