--- a/src/app/criar-produto/criar-produto.component.css
+++ b/src/app/criar-produto/criar-produto.component.css
@@ -14,6 +14,17 @@
 
  }
 
+ .animate-hover{
+   position:relative;
+   top:0;
+   padding:4px;
+   transition: all .2s ease-in-out
+}
+.animate-hover:hover{
+    top:-9px;
+    box-shadow:0 4px 3px #999
+}
+
 /* Checkbox Hack */
 #toggle-1 {
     display:none;
