--- a/src/app/funcionario/funcionario.component.css
+++ b/src/app/funcionario/funcionario.component.css
@@ -13,5 +13,20 @@
     min-width: auto;
     border-bottom: 1px solid rgb(44, 44, 44); 
     width: 600px;
+    -webkit-box-shadow: 7px 5px 5px rgba(50, 50, 50, 0.77);
+    -moz-box-shadow:    7px 5px 5px rgba(50, 50, 50, 0.77);
+    box-shadow:         7px 5px 5px rgba(50, 50, 50, 0.77);
 
  }
+
+ 
+ .animate-hover{
+   position:relative;
+   top:0;
+   padding:4px;
+   transition: all .2s ease-in-out
+}
+.animate-hover:hover{
+    top:-9px;
+    box-shadow:0 4px 3px #999
+}
