--- a/src/app/produto-detail/produto-detail.component.css
+++ b/src/app/produto-detail/produto-detail.component.css
@@ -4,6 +4,10 @@
     border-radius: 5px;
     padding: 10px;
     margin-top: 10px;
+    margin-bottom: 30px;
+    -webkit-box-shadow: 9px 7px 5px rgba(90, 90, 90, 0.795);
+     -moz-box-shadow: 9px 7px 5px rgba(90, 90, 90, 0.795);
+     box-shadow: 9px 7px 5px rgba(90, 90, 90, 0.795);
  }
 
  .bt-comp{
@@ -14,6 +18,25 @@
 
  }
 
+ .box-dados{
+    border-radius: 0px 10px 10px 0px;
+   min-height: 450px; width: 200px; background-color: #353535;
+   -webkit-box-shadow: 9px 7px 5px rgba(50, 50, 50, 0.77);
+   -moz-box-shadow:    9px 7px 5px rgba(50, 50, 50, 0.77);
+   box-shadow:         9px 7px 5px rgba(50, 50, 50, 0.77);
+ }
+
+
+ .animate-hover{
+   position:relative;
+   top:0;
+   padding:4px;
+   transition: all .2s ease-in-out
+}
+.animate-hover:hover{
+    top:-4px;
+    box-shadow:0 4px 3px rgb(71, 71, 71)
+}
 /* Checkbox Hack */
 #toggle-1 {
     display:none;
