--- a/src/app/produto-detail/produto-detail.component.html
+++ b/src/app/produto-detail/produto-detail.component.html
@@ -2,7 +2,7 @@
   <h3> {{ produto['name'] }}</h3>
   <div class="media " style="height: 500px; height: max-content;">
     <img src="{{produto.file}}" width="500px" height="auto">
-    <div style="min-height: 450px; width: 200px; background-color: #353535;">
+    <div class="box-dados">
       <p style=" color:#45ed27; font-weight: bold; font-size: 40px;"> R${{ produto['preco'] }} </p>
       <p style="font-size: 22px; color:#45ed27 ;">
         <img src="https://i.ibb.co/9YBcC2j/icone2.png" width="30" height="30" alt="asda"> {{produto['quantidade']}}
@@ -17,29 +17,33 @@
           <div>
             <button
               [disabled]="frmV.invalid || 0 >= frmV.value.quantidade || 0 == produto['quantidade'] || frmV.value.quantidade > produto['quantidade']"
-              class="btn  btn-lg bt-comp" type="submit"> Criar venda</button>
+              class="btn btn-lg bt-comp animate-hover" type="submit"> Criar venda</button>
           </div>
         </form>
         <br>
-        <button (click)="deleteProduto()" class="btn btn-primary btn-lg"
+        <button (click)="deleteProduto()" class="btn btn-primary btn-lg animate-hover"
           style="background-color: #ed2727; color:#353535; font-weight: bold; width: 187px;"> Remover </button>
         <br>
         <br>
         <div>
           <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-          <label for="toggle-1" class="leo btn btn-primary btn-lg bt-comp"> Editar </label>
+          <label for="toggle-1" class="leo btn btn-primary btn-lg bt-comp animate-hover"> Editar </label>
           <input id="toggle-1" type="checkbox">
           <form style="text-align: left; padding: 5px;" ng-hide="myVar" id="mostra" method="POST" #frm="ngForm"
             (ngSubmit)="putProduto(frm)">
             <hr>
             <label for="name" style=" color: white;"> Nome:</label>
-            <input class="form-control" type="text" id="name" name="name" [(ngModel)]="produto.name" required>
+            <input class="form-control animate-hover" type="text" id="name" name="name" [(ngModel)]="produto.name" required>
             <label for="qtd" style=" color: white;"> Quantidade: </label>
-            <input class="form-control" type="number" min="0" id="qtd" name="quantidade"
+            <input class="form-control animate-hover" type="number" min="0" id="qtd" name="quantidade"
               [(ngModel)]="produto.quantidade" required>
             <label for="preco" style=" color: white;"> Preco: </label>
-            <input class="form-control" type="number" min="0" id="preco" name="preco" [(ngModel)]="produto.preco"
+            <input class="form-control animate-hover" type="number" min="0" id="preco" name="preco" [(ngModel)]="produto.preco"
               required>
+            <label for="preco" style=" color: white;"> Descrição: </label>
+            <textarea style="min-height: 100px;" class="form-control animate-hover" type="text" id="descricao"
+              name="descricao" [(ngModel)]="produto.descricao" required>
+              </textarea>
             <br>
             <div style="text-align: center;">
               <button class="btn btn-lg btn-primary" type="submit"> Confirmar </button>
@@ -53,6 +57,7 @@
       </div>
     </div>
   </div>
+  <hr>
   <h3> Descrição: </h3>
-  <p> Produto novo e nem usado. pronto para seu uso</p>
+  <p> {{produto.descricao}}</p>
 </div>
