--- a/src/app/vendas/vendas.component.css
+++ b/src/app/vendas/vendas.component.css
@@ -13,3 +13,34 @@
     width: 187px;
 
  }
+
+ 
+ .item-card{
+   background-color: #ffffff; width: 100%; min-width: 700px; border-bottom: 1px solid rgb(44, 44, 44); 
+   margin-bottom:10px ;
+   -webkit-box-shadow: 9px 7px 5px rgba(50, 50, 50, 0.77);
+    -moz-box-shadow:    9px 7px 5px rgba(50, 50, 50, 0.77);
+    box-shadow:         9px 7px 5px rgba(50, 50, 50, 0.77);
+    transition: border-color 1s linear 0.1s;
+    border-radius: 5px;
+    
+
+  }
+  .img-sombra{
+   -webkit-box-shadow: 4px 2px 3px rgba(50, 50, 50, 0.77);
+   -moz-box-shadow:    4px 2px 3px rgba(50, 50, 50, 0.77);
+   box-shadow:         4px 2px 3px rgba(50, 50, 50, 0.77);
+   margin: 5px;
+   border-radius: 2px 10px 3px 55px;
+  }
+
+  .animate-hover{
+      position:relative;
+      top:0;
+      padding:4px;
+      transition: all .2s ease-in-out
+   }
+   .animate-hover:hover{
+       top:-4px;
+       box-shadow:0 4px 3px #999
+   }
