adicionado token na requisição

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div>
     <h1 style="color: aqua;"> Api Loja </h1>
-    <h2 style="color: aqua;"> Aqui você podera pesquisar os produtos e saber se estão disponiveis em nossa loja fisica
+    <h2 style="color: aqua;"> Aqui você poderá pesquisar os produtos e saber se estão disponiveis em nossa loja fisica
     </h2>
 
 
