--- a/src/app/produto-detail/produto-detail.component.css
+++ b/src/app/produto-detail/produto-detail.component.css
@@ -1,6 +1,7 @@
 .box-middle {
     background-color: #2e2e2e;
     background-color: #e9e9e9;
+    max-width: 700px;
     border-radius: 5px;
     padding: 10px;
     margin-top: 10px;
